# FarmaList_backend2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
database/: datos.sql  db.sql
flask_app/: .env.example  __init__.py  models.py  schemas.py
flask_app/API/: __init__.py  convocatorias.py  correo.py  endpoints.py  excel.py  personas.py
flask_app/API/auth/: .env.example  __init__.py
flask_app/API/centros/: __init__.py  centro.py  farmacia.py  farmacia_hospitalaria.py
flask_app/API/listados/: __init__.py  listado_farmacias.py  listado_farmacias_hospitalarias.py
flask_app/correo/: .env.example  __init__.py
flask_app/excel/: __init__.py
